--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,11 +1,15 @@
 {
-
-"routes":[
-  {
-  "src" : "/",
-    "dest":"/"
-  }
-]
-
-
+  "version": 2,
+  "builds": [
+    {
+      "src": "app.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ]
 }
